--- a/client/src/index.css
+++ b/client/src/index.css
@@ -173,7 +173,7 @@ h4 {
 .glow {
   width: 400px;
   height: 400px;
-  border-radius: 50%; /* Makes it a perfect circle */
+  border-radius: 45%;
   background-color: var(--phed-blue-dark);
   position: fixed; /* Changed from absolute to fixed */
   opacity: 0.3;
@@ -186,6 +186,23 @@ h4 {
 
   /* Optional glow enhancement */
   filter: blur(15px);
+  animation: glowon 5.5s linear infinite;
+  transition: opacity 5.5s ease-in-out;
+}
+
+@keyframes glowon {
+  0% {
+    opacity: 0.3;
+    transform: translate(-50%, -50%) rotate(120deg);
+  }
+  50% {
+    opacity: 0.6;
+    transform: translate(-50%, -50%) rotate(240deg);
+  }
+  100% {
+    opacity: 0.3;
+    transform: translate(-50%, -50%) rotate(360deg);
+  }
 }
 
 .live-chat-btn {
@@ -208,7 +225,7 @@ h4 {
 
   /* Animation properties */
   transform-origin: right center;
-  animation: rollIn 800ms cubic-bezier(0.68, -0.55, 0.27, 1.55) forwards 5s 1;
+  /* animation: rollIn 800ms cubic-bezier(0.68, -0.55, 0.27, 1.55) forwards 5s 1; */
 }
 
 @keyframes rollIn {
@@ -523,7 +540,7 @@ h4 {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: var(--phed-blue-dark);
+  background: linear-gradient(145deg, var(--phed-blue-dark), var(--bg-color));
   border-radius: 25px;
 }
 
@@ -579,6 +596,17 @@ h4 {
   justify-content: space-between;
   align-items: center;
   margin-bottom: 0.5rem;
+}
+
+.complaint-header select {
+  padding: 0.25rem 0.5rem;
+  border-radius: 12px;
+  font-size: 0.75rem;
+  font-weight: bold;
+  outline: none;
+  border: none;
+  background-color: var(--border-color);
+  color: white;
 }
 
 .status-badge {
